--- a/src/app/list/list.page.html
+++ b/src/app/list/list.page.html
@@ -9,7 +9,7 @@
     <li *ngFor="let hiking of hikings$ | async"
       [class.selected]="hiking.id === selectedId">
       <a [routerLink]="['/hiking', hiking.id]">
-        <span class="badge">{{ hiking.id }}</span>{{ hiking.name }}
+        <span class="badge">{{ hiking.id }} - </span>{{ hiking.name }}
       </a>
     </li>
   </ul>
