--- a/src/app/hiking-detail/hiking-detail.page.html
+++ b/src/app/hiking-detail/hiking-detail.page.html
@@ -5,17 +5,22 @@
 </ion-header>
 
 <ion-content>
-  <h2>Hikings</h2>
   <div *ngIf="hiking$ | async as hiking">
-    <h3>"{{ hiking.name }}"</h3>
-    <div>
-      <label>Id: </label>{{ hiking.id }}</div>
-    <div>
-      <label>Name: </label>
-      <input [(ngModel)]="hiking.name" placeholder="name"/>
-    </div>
-    <p>
-      <button (click)="backToList()">Back</button>
-    </p>
+    <ion-item>
+      <ion-label position="stacked">Nom</ion-label>
+      <ion-textarea [(ngModel)]="hiking.name" placeholder="nom"></ion-textarea>
+    </ion-item>
+    <ion-item>
+      <ion-label position="stacked">Description</ion-label>
+      <ion-textarea [(ngModel)]="hiking.description" placeholder="description"></ion-textarea>
+    </ion-item>
+    <ion-item>
+      <ion-label position="stacked">Distance</ion-label>
+      <ion-range min="0" max="30" [(ngModel)]="hiking.distance" step="1" pin="true" snaps="true" color="secondary">
+        <ion-label slot="start">0</ion-label>
+        <ion-label slot="end">30</ion-label>
+      </ion-range>
+    </ion-item>
+    <ion-button color="primary" size="small" (click)="backToList()">Retour</ion-button>
   </div>
 </ion-content>
