adding hiking in progress

--- a/src/app/list/list.page.html
+++ b/src/app/list/list.page.html
@@ -5,17 +5,23 @@
 </ion-header>
 
 <ion-content>
+  <ion-card>
+    <ion-card-header>
+        <ion-card-title>Liste des randonnées</ion-card-title>
+    </ion-card-header>
+    <ion-card-content>
 
-  <ion-list>
-    <ion-list-header>
-      <ion-label>Liste des randonnées</ion-label>
-    </ion-list-header>
-    <ion-item *ngFor="let hiking of hikings$ | async"
-    [class.selected]="hiking.id === selectedId">
-      <a [routerLink]="['/hiking', hiking.id]">
-        {{ hiking.name }}
-      </a>
-    </ion-item>
-  </ion-list>
-
+      <ion-list>
+        <!-- <ion-list-header>
+          <ion-label>Liste des randonnées</ion-label>
+        </ion-list-header> -->
+        <ion-item *ngFor="let hiking of hikings$ | async"
+        [class.selected]="hiking.id === selectedId">
+          <a [routerLink]="['/hiking', hiking.id]">
+            {{ hiking.name }}
+          </a>
+        </ion-item>
+      </ion-list>
+    </ion-card-content>
+  </ion-card>
 </ion-content>
