--- a/src/app/hiking-detail/hiking-detail.page.html
+++ b/src/app/hiking-detail/hiking-detail.page.html
@@ -5,22 +5,28 @@
 </ion-header>
 
 <ion-content>
-  <div *ngIf="hiking$ | async as hiking">
-    <ion-item>
-      <ion-label position="stacked">Nom</ion-label>
-      <ion-textarea [(ngModel)]="hiking.name" placeholder="nom"></ion-textarea>
-    </ion-item>
-    <ion-item>
-      <ion-label position="stacked">Description</ion-label>
-      <ion-textarea [(ngModel)]="hiking.description" placeholder="description"></ion-textarea>
-    </ion-item>
-    <ion-item>
-      <ion-label position="stacked">Distance</ion-label>
-      <ion-range min="0" max="30" [(ngModel)]="hiking.distance" step="1" pin="true" snaps="true" color="secondary">
-        <ion-label slot="start">0</ion-label>
-        <ion-label slot="end">30</ion-label>
-      </ion-range>
-    </ion-item>
-    <ion-button color="primary" size="small" (click)="backToList()">Retour</ion-button>
-  </div>
+  <ion-card *ngIf="hiking$ | async as hiking">
+    <ion-card-header>
+        <ion-card-title>{{hiking.name}}</ion-card-title>
+    </ion-card-header>
+    <ion-card-content>
+      <ion-item>
+        <ion-label position="stacked">Nom</ion-label>
+        <ion-textarea [(ngModel)]="hiking.name" placeholder="nom"></ion-textarea>
+      </ion-item>
+      <ion-item>
+        <ion-label position="stacked">Description</ion-label>
+        <ion-textarea [(ngModel)]="hiking.description" placeholder="description"></ion-textarea>
+      </ion-item>
+      <ion-item>
+        <ion-label position="stacked">Distance</ion-label>
+        <ion-range min="0" max="30" [(ngModel)]="hiking.distance" step="1" pin="true" snaps="true" color="secondary">
+          <ion-label slot="start">0</ion-label>
+          <ion-label slot="end">30</ion-label>
+        </ion-range>
+      </ion-item>
+      <ion-button color="primary" size="small" [routerLink]="['/list']">Retour</ion-button>
+      <ion-button color="primary" size="small" [routerLink]="['/hiking-in-progress', hiking.id]">En cours</ion-button>
+    </ion-card-content>
+  </ion-card>
 </ion-content>
