hiking in progress ok

--- a/src/app/hiking-detail/hiking-detail.page.html
+++ b/src/app/hiking-detail/hiking-detail.page.html
@@ -19,7 +19,7 @@
         <ion-textarea [(ngModel)]="hiking.description" placeholder="description"></ion-textarea>
       </ion-item>
       <ion-item>
-        <ion-label position="stacked">Distance</ion-label>
+        <!-- <ion-label position="stacked">Distance</ion-label> -->
         <ion-range min="0" max="30" [(ngModel)]="hiking.distance" step="1" pin="true" snaps="true" color="secondary">
           <ion-label slot="start">0</ion-label>
           <ion-label slot="end">30</ion-label>
