--- a/src/app/hiking-in-progress/hiking-in-progress.page.html
+++ b/src/app/hiking-in-progress/hiking-in-progress.page.html
@@ -5,11 +5,12 @@
 </ion-header>
 
 <ion-content>
-  <ion-card>
+  <ion-card *ngIf="hiking$ | async as hiking">
     <ion-card-header>
       <ion-card-title>{{hiking.name}}</ion-card-title>
     </ion-card-header>
     <ion-card-content>
+
     </ion-card-content>
   </ion-card>
 </ion-content>
