--- a/src/app/list/list.page.html
+++ b/src/app/list/list.page.html
@@ -1,27 +1,22 @@
-<ion-header>
-  <ion-toolbar>
-    <ion-title>list</ion-title>
-  </ion-toolbar>
-</ion-header>
-
 <ion-content>
-  <ion-card>
+  <ion-header>
+      <ion-toolbar>
+        <ion-title>Liste des randonnées</ion-title>
+      </ion-toolbar>
+    </ion-header>
+
+
+
+  <ion-card *ngFor="let hiking of hikings" [class.selected]="hiking.id === selectedId">
     <ion-card-header>
-        <ion-card-title>Liste des randonnées</ion-card-title>
+        <ion-card-title>{{hiking.name}}</ion-card-title>
+        <ion-card-subtitle>{{hiking.location}}</ion-card-subtitle> 
     </ion-card-header>
     <ion-card-content>
-
-      <ion-list>
-        <!-- <ion-list-header>
-          <ion-label>Liste des randonnées</ion-label>
-        </ion-list-header> -->
-        <ion-item *ngFor="let hiking of hikings"
-        [class.selected]="hiking.id === selectedId">
-          <a [routerLink]="['/hiking', hiking.id]">
-            {{ hiking.name }}
-          </a>
-        </ion-item>
-      </ion-list>
+      {{hiking.description}}
+      {{hiking.heightdiff}}
+      {{hiking.duration}}
+      {{hiking.notation}}
     </ion-card-content>
   </ion-card>
 </ion-content>
