Some changes on login page

--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -4,13 +4,15 @@
       <ion-row color="primary" justify-content-center>
         <ion-col align-self-center size-md="6" size-lg="5" size-xs="12">
           <div text-center>
-            <h3>Connexion</h3>
+            <ion-img src="../../assets/image/logo.jpg"></ion-img>
           </div>
           <div padding>
             <ion-item>
+              <ion-label position="stacked">Email</ion-label>
               <ion-input name="email" type="email" placeholder="your@email.com" ngModel required></ion-input>
             </ion-item>
             <ion-item>
+              <ion-label position="stacked">Password</ion-label>
               <ion-input name="password" type="password" placeholder="Password" ngModel required></ion-input>
             </ion-item>
           </div>
