--- a/src/app/login/login.page.html
+++ b/src/app/login/login.page.html
@@ -8,11 +8,11 @@
           </div>
           <div padding>
             <ion-item>
-              <ion-label position="stacked">Email</ion-label>
+              <ion-label position="fixed">Email</ion-label>
               <ion-input name="email" type="email" placeholder="your@email.com" ngModel required></ion-input>
             </ion-item>
             <ion-item>
-              <ion-label position="stacked">Password</ion-label>
+              <ion-label position="fixed">Password</ion-label>
               <ion-input name="password" type="password" placeholder="Password" ngModel required></ion-input>
             </ion-item>
           </div>
