fixed map issue

--- a/src/app/hiking-detail/hiking-detail.page.html
+++ b/src/app/hiking-detail/hiking-detail.page.html
@@ -33,7 +33,7 @@
             </ion-col>
           </ion-row>
         </ion-grid>
-        <div id="mapid"></div>
+        <div id="detailmap"></div>
         <ion-list *ngIf="hiking.steps">
           <ion-list-header text-center>
               <ion-title>Etapes</ion-title>
