--- a/src/app/hiking-in-progress/hiking-in-progress.page.html
+++ b/src/app/hiking-in-progress/hiking-in-progress.page.html
@@ -4,7 +4,7 @@
           <ion-card-title>{{hiking.name}}</ion-card-title>
       </ion-card-header>
       <ion-card-content>
-        <div id="mapid"></div>
+        <div id="progressmap"></div>
         <ion-list *ngIf="hiking.steps">
           <ion-list-header text-center>
               <ion-title>Etapes</ion-title>
