--- a/src/app/list/list.page.html
+++ b/src/app/list/list.page.html
@@ -4,7 +4,7 @@
   </ion-item>
   <ion-card *ngFor="let hiking of hikings" [class.selected]="hiking.id === selectedId">
     <ion-card-header>
-      <a [routerLink]="['/hiking', hiking.id]"><ion-card-title>{{hiking.name}}</ion-card-title></a>
+      <a class="hiking-link-{{hiking.id}}" [routerLink]="['/hiking', hiking.id]"><ion-card-title>{{hiking.name}}</ion-card-title></a>
         <ion-card-subtitle>{{hiking.location}}</ion-card-subtitle> 
     </ion-card-header>
     <ion-card-content>
