--- a/src/app/list/list.page.html
+++ b/src/app/list/list.page.html
@@ -2,7 +2,7 @@
   <ion-item text-center>
     <ion-title>Mes Randonnées</ion-title>
   </ion-item>
-  <ion-card *ngFor="let hiking of hikings" [class.selected]="hiking.id === selectedId">
+  <ion-card *ngFor="let hiking of hikings">
     <ion-card-header>
       <a class="hiking-link-{{hiking.id}}" [routerLink]="['/hiking', hiking.id]"><ion-card-title>{{hiking.name}}</ion-card-title></a>
         <ion-card-subtitle>{{hiking.location}}</ion-card-subtitle> 
