--- a/src/app/hiking-in-progress/hiking-in-progress.page.html
+++ b/src/app/hiking-in-progress/hiking-in-progress.page.html
@@ -30,8 +30,8 @@
       <ion-row>
         <ion-col text-center>
           <ion-button color="primary" size="medium" [routerLink]="['/list']">Retour à la liste</ion-button>
-          <ion-button color="danger" size="medium" (click)="stopHiking()">Terminer</ion-button>
         </ion-col>
       </ion-row>
     </ion-grid>
+    <app-timer></app-timer>
   </ion-content>
