added/removed unit tests + update README

--- a/src/app/timer/timer.component.html
+++ b/src/app/timer/timer.component.html
@@ -10,7 +10,7 @@
           <ion-icon name="compass" style="margin:auto;"></ion-icon>
         </div>
         <div>
-          <ion-title class="print-timer"> {{ hours }}:{{ minutes }}:{{ seconds }}</ion-title>
+          <ion-title class="print-timer"> {{ h }}:{{ min }}:{{ sec }}</ion-title>
         </div>  
       </ion-col>
       <ion-col text-center>
